--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "yarn tsc",
+    "test": "yarn jest --verbose",
     "start": "node ./dist/index.js"
   },
   "dependencies": {
@@ -14,7 +15,11 @@
     "dotenv": "^16.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@types/node": "^17.0.21",
+    "axios-mock-adapter": "^1.21.2",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.6.2"
   }
 }
